--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.60.0"
+    "react-hook-form": "^7.60.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
